--- a/server/package.json
+++ b/server/package.json
@@ -6,19 +6,32 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "initdb": "psql -f ./src/db/sql_init.sql"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "socket.io": "^2.3.0"
+    "helmet": "^4.1.1",
+    "joi": "^17.2.1",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.3.3",
+    "socket.io": "^2.3.0",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.6",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.13",
+    "@types/pg": "^7.14.5",
     "@types/socket.io": "^2.1.8",
+    "@types/uuid": "^8.3.0",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
