--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "helmet": "^4.1.1",
     "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "pg": "^8.3.3",
     "socket.io": "^2.3.0",
     "uuid": "^8.3.0"
@@ -28,6 +29,7 @@
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/multer": "^1.4.4",
     "@types/node": "^14.0.13",
     "@types/pg": "^7.14.5",
     "@types/socket.io": "^2.1.8",
