--- a/server/package.json
+++ b/server/package.json
@@ -19,8 +19,10 @@
     "helmet": "^4.1.1",
     "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
+    "knex": "^0.21.6",
     "multer": "^1.4.2",
     "pg": "^8.3.3",
+    "sharp": "^0.26.1",
     "socket.io": "^2.3.0",
     "uuid": "^8.3.0"
   },
@@ -32,6 +34,7 @@
     "@types/multer": "^1.4.4",
     "@types/node": "^14.0.13",
     "@types/pg": "^7.14.5",
+    "@types/sharp": "^0.26.0",
     "@types/socket.io": "^2.1.8",
     "@types/uuid": "^8.3.0",
     "nodemon": "^2.0.4",
