--- a/server/package.json
+++ b/server/package.json
@@ -23,8 +23,7 @@
     "multer": "^1.4.2",
     "pg": "^8.3.3",
     "sharp": "^0.26.1",
-    "socket.io": "^2.3.0",
-    "uuid": "^8.3.0"
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
