--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/server.js",
+    "lint": "./node_modules/.bin/eslint .",
     "dev": "nodemon src/server.ts",
     "build": "tsc -p .",
     "initdb": "psql -f ./src/db/sql_init.sql"
@@ -20,7 +21,9 @@
     "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.6",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "nanoid": "^3.1.12",
     "pg": "^8.3.3",
     "sharp": "^0.26.1",
     "socket.io": "^2.3.0"
@@ -30,12 +33,15 @@
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/morgan": "^1.9.1",
     "@types/multer": "^1.4.4",
     "@types/node": "^14.0.13",
     "@types/pg": "^7.14.5",
     "@types/sharp": "^0.26.0",
     "@types/socket.io": "^2.1.8",
-    "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.4.0",
+    "eslint": "^7.10.0",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
